# AI-Economy-Protocol

./: .env.example  .gitignore  README.md  RUN_MULTI_CLIENT_DEMO.md  SUBMISSION.md  agent1qdkv6m4z9q_data.json  agent1qgxs4fmvhk_data.json  agent1qwd63x7vsu_data.json  requirements.txt  roadmap.txt  start_marketplace.py  test-x402-simple.py  test_marketplace.py
agents/: README.md  agent1qdkv6m4z9q_data.json  agent1qwd63x7vsu_data.json  agent_a.py  agent_a_x402.py  agent_b.py  agent_b_x402.py  agent_c.py  code_review_agent.py  content_analyst_agent.py  content_analyst_agent_backup.py  monitor_dashboard.py  start_agents.bat  test_agent_communication.py  test_agent_receiver.py  test_agent_sender.py  test_payment_flow.py  test_suite_comprehensive.py  translator_agent.py
contracts/: Anchor.toml  GATEWAY_INTEGRATION.md  README.md  close_escrow.py  fix_token_accounts.py  package.json  requirements.txt  submit_proof_only.py  test_full_flow.py  test_release.py  test_sanctum_gateway.py  tsconfig.json
dashboard/: README.md
logs/: metrics.json  transactions_20251009.jsonl  transactions_20251010.jsonl  transactions_20251011.jsonl  transactions_20251028.jsonl  (+1 more)
marketplace/: api.py  (+5 more)
sdk/: README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
sdk/aep/: __init__.py  async_client.py  async_payments.py  client.py  config.py  errors.py  escrow.py  models.py  payments.py  types.py
sdk/docs/: api.md  examples.md  index.md
sdk/examples/: async_quickstart.py  quickstart.py
sdk/tests/: test_async_clients.py  test_marketplace_client.py  test_payment_client.py
(+66 files in other folders)
