[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aep-sdk"
version = "0.1.0"
description = "Python SDK for AI Economy Protocol (AEP): Marketplace + x402 payments"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "AEP Team" }]
dependencies = [
  "requests>=2.28",
  "pydantic>=1.10,<3",
  "httpx>=0.24,<1",
]

[project.urls]
Homepage = "https://github.com/ctrl-OVERR1DE/AI-Economy-Protocol"
Repository = "https://github.com/ctrl-OVERR1DE/AI-Economy-Protocol"

[tool.setuptools.packages.find]
where = ["."]
include = ["aep*"]
